[package]
name = "sac13"
version = "0.0.2"
edition = "2024"
description = "The reference implementation for the SAC13 calendar system."
license = "Unlicense"
homepage = "https://sac13.net"
repository = "https://github.com/SAC-Thirteen/sac13.rs"
readme = "README.md"
# TODO: "embedded", "no-std::no-alloc", "no-std", "wasm" category? Test and implement no-std first
categories = ["date-and-time"]
keywords = ["sac13", "calendar"]

[dependencies]

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[features]
std = []
